# RecruitMCP

./: .env_example  .gitignore  README.md  pyproject.toml  server.py  test_api.py
data/: youth_programs.json
models/: company.py  recruit.py  training.py  youth_program.py
tools/: company_tools.py  recruit_tools.py  training_tools.py  youth_program_tools.py
utils/: http_client.py
